fix bottom panel height input on mobile devices

--- a/sass/pages/user/Notifications.scss
+++ b/sass/pages/user/Notifications.scss
@@ -700,6 +700,7 @@
 @media (max-width: 450px) {
   .messageChats {
     min-height: initial;
+    height: 30%;
   }
   .messageUserBlockTime {
     font-size: 10px;
